<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timy</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    
    <string name="add_time_for">Add time for</string>
    <string name="for_date">For date</string>
    <string name="reactivate_old_project">Reactivate old project</string>
    <string name="reactivate_old_category">Reactivate old category</string>
    <string name="yes_reactivate">Yes, reactivate</string>
    <string name="no_create_new">No, create new</string>
    
    <string name="no_color">Please set up your Google sync. After that you can select what color your project should have.</string>
    
    <string name="error_sync_title">Error syncing</string>
    <string name="error_bad_account">Please make sure you have a correct Google account setup in preferences</string>
    <string name="error_bad_calendar">Please make sure you have selected a calendar to sync to</string>
    <string name="error_bad_sync">Tried to sync reports to calendar but after ten tries it is still unsuccessful.</string>
    
    <string name="no_google_play_on_device">Google Play is not up to date on the device. Please update it before using this app.</string>
    
    <string name="delete_category_title">How deletion works</string>
    <string name="delete_category_message">This category has not been deleted, it has been deactivated. This is because at least one of its projects have reports attached to them.\n\nProjects with no reports have been deleted. Projects with reports have been deactivated.</string>
    <string name="delete_project_title">Not deleted?</string>
    <string name="delete_project_message">Since this project had at least one report attached to it it could not be deleted, it has instead been deactivated. You may choose to reactivate it if you create a new project with the same name.</string>
    <string name="never_notify_again">Don\'t notify me again</string>
    
    <string name="add_category_first_title">Add category first</string>
    <string name="add_category_first_message">You need to create a category before creating any projects. Click the menu button.</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="please_wait">Please wait</string>
    <string name="about">About</string>
    <string name="today">Today</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="notification_title">Time report</string>
    <string name="notification_text">Remember to report time for today.</string>
    
    <string-array name="ack_list">
        <item>OrmLite is used for a simple approach to databas mapping. You can find it here: http://ormlite.com/</item>
        <item>The TimePreference dialog was borrowed from CommonsWare here: https://github.com/commonsguy/cw-lunchlist/blob/master/19-Alarm/LunchList/src/apt/tutorial/TimePreference.java</item>
        <item>Google APIs Client Library for Java. Found here: https://code.google.com/p/google-api-java-client/</item>
        <item>Some icons used from http://www.androidicons.com/</item>
    </string-array>
    
    <string name="copyright">&#169; 2013 Mike</string>
    <string name="checking_permission">Checking permission &#8230;</string>
    <string name="getting_colors">Retrieving colors &#8230;</string>
    <string name="getting_calendar_info">Getting calendar info &#8230;</string>
    
    <string name="project_color">Select project color</string>
    
    <string name="hint_add_hours">Add hours to</string>
    <string name="hint_add_project">Project name</string>
    <string name="hint_add_category">Category name</string>
    <string name="hint_comment">Comment</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_add_project">Add project</string>
    <string name="menu_add_category">Add category</string>
    <string name="menu_edit_category">Edit category</string>
    <string name="menu_remove_category">Remove category</string>
    
    <string name="listmenu_title">Edit</string>
    <string name="listmenu_edit">Edit</string>
    <string name="listmenu_remove">Remove</string>
    
    <string name="google_permission_title">Need permissions</string>
    <string name="google_permission_message">Please select a Google account in the settings window and make sure to allow Timy to manage your calendars</string>
    
    <string name="delete_or_hide_title">Select</string>
    
    <string-array name="delete_or_hide">
        <item>Just hide me</item>
        <item>Delete me and all my data</item>
    </string-array>
    

</resources>