<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/input"
        android:hint="@string/hint_add_project"
        android:inputType="textCapSentences"
        android:padding="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <requestFocus />
    </EditText>
    
    <GridView 
	    android:id="@+id/gridview"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:columnWidth="90dp"
	    android:numColumns="auto_fit"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center"
	/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />
	    
	    <Button
	        android:id="@+id/btnOk"
	        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:text="@string/ok" />

	    
    
    </LinearLayout>
    
</LinearLayout>